--- a/public/notes.html
+++ b/public/notes.html
@@ -3,9 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="styles/style.css" type="text/css" re="stylesheet">
+    <title>Your Notes</title>
   </head>
   <body>
-    <h1>This is Notes</h1>
+    
+    <div class="wrapper">
+        <p>Notes</p>
+        <div class="notes">
+            <div class="toolbar">
+                <p>Add Note</p>
+            </div>
+            <div class="allNotes">
+                <div class="eachNote">
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
