--- a/public/notes.html
+++ b/public/notes.html
@@ -3,48 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link href="/styles/style.css" type="text/css" rel="stylesheet" />
-    <title>Your Notes</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Note Taker</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
+
   <body>
-    <div class="wrapper">
-      <p id="PageTitle">Notes Taker</p>
-      <div class="notes">
-        <div class="toolbar">
-          <div id="AddNote">
-            <p style="text-align: center;">Add New Note</p>
-            <textarea id="AddNotedTextFld"></textarea>
-            <div id="AddNoteBtn">
-              <p
-                style="margin: auto; position: absolute; top: 50%; transform: translateY(-50%);"
-              >
-                <img src="SaveIcon.png" style="width: 24px; height: 22px" />
-                <sup style="font-size: 15px;">Save</sup>
-              </p>
-            </div>
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Note Taker </a>
+      <div class="icons">
+        <i class="fas fa-save text-light save-note"></i>
+        <i class="fas fa-pen text-light new-note"></i>
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-4 list-container">
+          <div class="card">
+            <ul class="list-group"></ul>
           </div>
         </div>
-        <div class="allNotes">
-          <p style="text-align: center; padding-top: 5px;">Current Notes</p>
-          <div id="notesList">
-          <div class="eachNote">
-            <div class="noteTxt"></div>
-            <div class="deleteNoteBtn">
-              
-              <p>
-                <img src="DeleteIcon.png" style="width: 24px; height: 22px" />
-                <sup style="font-size: 15px;">Delete</sup>
-                </p>
-            </div>
-          </div>
-          <div>
+        <div class="col-8">
+          <input
+            class="note-title"
+            placeholder="Note Title"
+            maxlength="28"
+            type="text"
+          />
+          <textarea class="note-textarea" placeholder="Note Text"></textarea>
         </div>
       </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="/scripts/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
